调整拓扑图基本的生成结构定位方法

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>拓扑图</title>
-    <link href="topology/topologyDiagram.css" rel="stylesheet" />
+    <link href="topology/topology.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div id='topology-multiRoot'></div>
     <script src="topology/jquery-3.1.1.js"></script>
     <script src="topology/raphael.js"></script>
-    <script src="topology/topologyDiagram.js"></script>
+    <script src="topology/topology.js"></script>
     <script src="js/index.js"></script>
 </body>
 
