--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id='topology-sample'></div>
     <p>多个根节点的拓扑图</p>
     <div id='topology-multiRoot'></div>
+    <p>合并节点的拓扑图</p>
+    <div id='topology-merge'></div>
     <script src="topology/jquery-3.1.1.js"></script>
     <script src="topology/raphael.js"></script>
     <script src="topology/topology.js"></script>
