添加绑定点击事件，加载子项

--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
     <div id='topology-multiRoot'></div>
     <p>合并节点的拓扑图</p>
     <div id='topology-merge'></div>
+    <p>双击添加子节点节点的拓扑图</p>
+    <div id='topology-addChildren'></div>
+    <p>双击添加父节点节点的拓扑图</p>
+    <div id='topology-addParents'></div>
     <script src="topology/jquery-3.1.1.js"></script>
     <script src="topology/raphael.js"></script>
     <script src="topology/topology.js"></script>
-    <script src="js/index.js"></script>
+    <!--<script src="js/index.js"></script>-->
+    <script src="js/addChildren.js"></script>
+    <script src="js/addParents.js"></script>
 </body>
 
 </html>
