发散节点的反向显示

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id='topology-sample'></div>
     <p>多个根节点的拓扑图</p>
     <div id='topology-multiRoot'></div>
+    <p>反向的拓扑图（reverse）</p>
+    <div id='topology-reverse'></div>
     <p>合并节点的拓扑图</p>
     <div id='topology-merge'></div>
     <p>双击添加子节点节点的拓扑图</p>
@@ -21,9 +23,12 @@
     <script src="topology/jquery-3.1.1.js"></script>
     <script src="topology/raphael.js"></script>
     <script src="topology/topology.js"></script>
-    <!--<script src="js/index.js"></script>-->
+    <script src="js/sample.js"></script>
+    <!--<script src="js/multiRoot.js"></script>-->
+    <script src="js/reverse.js"></script>
+    <!--<script src="js/mergeData.js"></script>
     <script src="js/addChildren.js"></script>
-    <script src="js/addParents.js"></script>
+    <script src="js/addParents.js"></script>-->
 </body>
 
 </html>
