子节点反向展示

--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <div id='topology-sample'></div>
     <p>多个根节点的拓扑图</p>
     <div id='topology-multiRoot'></div>
-    <p>反向的拓扑图（reverse）</p>
-    <div id='topology-reverse'></div>
     <p>合并节点的拓扑图</p>
     <div id='topology-merge'></div>
+    <p>反向子节点的拓扑图（reverse）从右到左显示</p>
+    <div id='topology-reverse'></div>
     <p>双击添加子节点节点的拓扑图</p>
     <div id='topology-addChildren'></div>
-    <p>双击添加父节点节点的拓扑图</p>
+    <p>双击添加反向子节点的拓扑图</p>
     <div id='topology-addParents'></div>
     <script src="topology/jquery-3.1.1.js"></script>
     <script src="topology/raphael.js"></script>
     <script src="topology/topology.js"></script>
     <script src="js/sample.js"></script>
-    <!--<script src="js/multiRoot.js"></script>-->
+    <script src="js/multiRoot.js"></script>
     <script src="js/reverse.js"></script>
-    <!--<script src="js/mergeData.js"></script>
+    <script src="js/mergeData.js"></script>
     <script src="js/addChildren.js"></script>
-    <script src="js/addParents.js"></script>-->
+    <script src="js/addParents.js"></script>
 </body>
 
 </html>
