添加click事件，并解决dblclick冲突

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <script src="topology/jquery-3.1.1.js"></script>
     <script src="topology/raphael.js"></script>
     <script src="topology/topology.js"></script>
-    <script src="js/sample.js"></script>
+    <!--<script src="js/sample.js"></script>
     <script src="js/multiRoot.js"></script>
     <script src="js/reverse.js"></script>
     <script src="js/reverse2.js"></script>
-    <script src="js/mergeData.js"></script>
+    <script src="js/mergeData.js"></script>-->
     <script src="js/addChildren.js"></script>
     <script src="js/addReverseChildren.js"></script>
 </body>
