添加拓扑图居右显示配置

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <div id='topology-reverse2'></div>
     <p>双击添加子节点节点的拓扑图（使用ondblclickLoad配置项）</p>
     <div id='topology-addChildren'></div>
-    <p>双击添加反向子节点的拓扑图（addNodes方法）</p>
+    <p>双击添加反向子节点的拓扑图（addNodes方法）且居右显示</p>
     <div id='topology-addReverseChildren'></div>
     <script src="topology/jquery-3.1.1.js"></script>
     <script src="topology/raphael.js"></script>
     <script src="topology/topology.js"></script>
-    <!--<script src="js/sample.js"></script>
+    <script src="js/sample.js"></script>
     <script src="js/multiRoot.js"></script>
     <script src="js/reverse.js"></script>
     <script src="js/reverse2.js"></script>
-    <script src="js/mergeData.js"></script>-->
+    <script src="js/mergeData.js"></script>
     <script src="js/addChildren.js"></script>
     <script src="js/addReverseChildren.js"></script>
 </body>
