添加垂直位置显示定位配置功能

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>拓扑图</title>
     <link href="topology/topology.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
