添加 loadNodes 方法支持重新加载数据

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <p>添加拓扑图数据</p>
+    <div id='topology-loadData'></div>
     <p>一个根节点简单的拓扑图</p>
     <div id='topology-sample'></div>
     <p>多个根节点的拓扑图（居中显示）</p>
@@ -33,6 +35,7 @@
     <script src="js/mergeData.js"></script>
     <script src="js/addChildren.js"></script>
     <script src="js/addReverseChildren.js"></script>
+    <script src="js/loadData.js"></script>
 </body>
 
 </html>
