--- a/index.ie8.html
+++ b/index.ie8.html
@@ -19,11 +19,11 @@
 </head>
 
 <body>
-    <p>一个根节点简单的拓扑图</p>
+    <!--<p>一个根节点简单的拓扑图</p>
     <div id='topology-sample'></div>
-    <p>添加拓扑图数据</p>
+    <p>添加拓扑图数据</p>-->
     <div id='topology-loadData'></div>
-    <p>多个根节点的拓扑图（居中显示）</p>
+    <!--<p>多个根节点的拓扑图（居中显示）</p>
     <div id='topology-multiRoot'></div>
     <p>合并节点的拓扑图</p>
     <div id='topology-merge'></div>
@@ -34,17 +34,17 @@
     <p>双击添加子节点节点的拓扑图（使用ondblclickLoad配置项）</p>
     <div id='topology-addChildren'></div>
     <p>双击添加反向子节点的拓扑图（addNodes方法）且居右显示</p>
-    <div id='topology-addReverseChildren'></div>
+    <div id='topology-addReverseChildren'></div>-->
 
     
     <script src="topology/topology.js"></script>
-    <script src="js/sample.js"></script>
+    <!--<script src="js/sample.js"></script>
     <script src="js/multiRoot.js"></script>
     <script src="js/reverse.js"></script>
     <script src="js/reverse2.js"></script>
     <script src="js/mergeData.js"></script>
     <script src="js/addChildren.js"></script>
-    <script src="js/addReverseChildren.js"></script>
+    <script src="js/addReverseChildren.js"></script>-->
     <script src="js/loadData.js"></script>
 </body>
 
